--- a/src/app/pages/user/user-login/user-login.component.html
+++ b/src/app/pages/user/user-login/user-login.component.html
@@ -1,1 +1,8 @@
-<p>user-login works!</p>
+<div class="container main-container">
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <h2>Iniciar Sesión</h2>
+      <button type="button" class="btn btn-outline-primary" (click)="ingresar()">Google</button>
+    </div>
+  </div>
+</div>
