register and login email

--- a/src/app/pages/user/user-login/user-login.component.html
+++ b/src/app/pages/user/user-login/user-login.component.html
@@ -3,6 +3,7 @@
     <div class="col-md-12 text-center">
       <h2>Iniciar Sesión</h2>
       <button type="button" class="btn btn-outline-primary" (click)="ingresar()">Google</button>
+      <button type="button" class="btn btn-outline-primary" (click)="register()">Registrarse</button>
     </div>
   </div>
 </div>
