--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -16,6 +16,8 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-light" type="submit">Search</button>
       </form>
+
+      <i class="bi bi-box-arrow-right" title="Cerrar Sesión" (click)="logout()"></i>
     </div>
   </div>
 </nav>
