--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -11,7 +11,7 @@
           <a class="nav-link active" aria-current="page" [routerLink]="['clientes']">Clientes</a>
         </li>
       </ul>
-      <span>{{ user.nombre }}</span>
+      <span>{{ user?.nombre }}</span>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-light" type="submit">Search</button>
