--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" [routerLink]="['clientes']">Clientes</a>
+          <a class="nav-link active" aria-current="page" [routerLink]="['main']">Releases</a>
         </li>
       </ul>
       <span style="color: #fff;">{{ user?.nombre }}</span>
