--- a/src/app/pages/home/tarjetas/tarjetas.component.html
+++ b/src/app/pages/home/tarjetas/tarjetas.component.html
@@ -1,23 +1,13 @@
-<!-- <div class="card-group m-5 animated fadeIn" style="display: flex;">
-
-  <div class="card" *ngFor="let item of items">
-    <img [src]="item.images[0].url" class="card-img-top" alt="...">
-    <div class="card-body">
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-        content.</p>
-    </div>
-  </div>
-
-</div> -->
 <div class="card-group m-5">
   <div class="card col-md-4" *ngFor="let item of items">
-    <img [src]="item.images[0].url" class="card-img-top" alt="...">
+    <img [src]="item.images[0].url" class="card-img-top" alt="Card imagen">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-        This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title">{{ item.name }}</h5>
+      <p class="card-text">
+        <span *ngFor="let artista of item.artists" class="badge rounded-pill bg-primary">
+          {{ artista.name }}
+        </span>
+      </p>
     </div>
   </div>
-
 </div>
