--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -10,8 +10,13 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" [routerLink]="['main']">Releases</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="['chat']">Chat</a>
+        </li>
       </ul>
       <span style="color: #fff;">{{ user?.nombre }}</span>
+
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-light" type="submit">Search</button>
